syncthing/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: syncthing/syncthing
        volumeMounts:
        - name: syncthing-data
          mountPath: /var/syncthing
        ports:
        - containerPort: 8384 # Web UI
          name: ui
        - containerPort: 22000 # TCP file transfers
          protocol: TCP
          name: tcp-transfer
        - containerPort: 22000 # QUIC file transfers
          protocol: UDP
          name: udp-transfer
        - containerPort: 21027 # Local discovery broadcasts
          protocol: UDP
          name: local-discovery
        livenessProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: syncthing-data
        persistentVolumeClaim:
          claimName: syncthing-pvc
