syncthing/app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-ui
spec:
  type: ClusterIP
  ports:
  - port: 8384
    targetPort: ui
    protocol: TCP
    name: ui
  selector:
    app: syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-nodeport
spec:
  type: NodePort
  ports:
  - port: 22000
    targetPort: tcp-transfer
    protocol: TCP
    name: tcp-transfer
    nodePort: 32200
  - port: 22000
    targetPort: udp-transfer
    protocol: UDP
    name: udp-transfer
    nodePort: 32201
  - port: 21027
    targetPort: local-discovery
    protocol: UDP
    name: local-discovery
    nodePort: 32202
  selector:
    app: syncthing
